scrollbar possible fix

--- a/src/scss/includes/_base.scss
+++ b/src/scss/includes/_base.scss
@@ -54,7 +54,7 @@ html {
 
     &:has(.has-menu-open),
     &.has-menu-open {
-        overflow: hidden;
+        // overflow: hidden;
     }
 }
 
